# matrix

./: .env.example  .gitignore  .gitmodules  GEMINI.md  README.md
agent/: .env  .metadata  README.md  pubspec.yaml
agent/android/app/: build.gradle.kts
agent/integration_test/: app_test.dart
agent/ios/Runner/: Info.plist
agent/ios/Runner.xcodeproj/: project.pbxproj
agent/lib/: environment.dart  main.dart  providers.dart  theme.dart
agent/lib/screens/: settings_screen.dart  sign_in_screen.dart
agent/lib/services/: architect_service.dart  autonomous_loop.dart  coding_agent.dart  (+1 more)
agent/linux/: CMakeLists.txt
agent/rust/: README.md  pubspec.yaml
agent/rust/rust/: Cargo.toml
agent/rust/rust/src/: frb_generated.rs  lib.rs  mcp_server.rs
agent/rust/rust/src/api/: simple.rs
agent/test/: autonomous_loop_test.dart  widget_test.dart
agent/web/: index.html  manifest.json
appwrite/: .env
design/: README.md  agent-prompt-design.md  architect-prompt-design.md  implementation-report-v1.md  init-draft.md  matrix-core-design.md  oracle-prompt-design.md
design/alpha/: PLAN.md
hq/: GEMINI.md  README.md  firebase.json  pubspec.yaml
hq/integration_test/: app_test.dart  simple_test.dart
hq/lib/: environment.dart  firebase_options.dart  main.dart  providers.dart  theme.dart
hq/linux/: CMakeLists.txt
hq/rust/: Cargo.toml
hq/rust_builder/: pubspec.yaml
hq/test/: mocks.dart  widget_test.dart
hq/web/: index.html  manifest.json
hq/windows/: CMakeLists.txt
program/: README.md  firebase.json  pubspec.yaml
program/integration_test/: simple_test.dart
program/lib/: firebase_options.dart  main.dart
program/linux/: CMakeLists.txt
program/rust/: Cargo.toml
program/rust_builder/: pubspec.yaml
program/test/: widget_test.dart
program/web/: index.html  manifest.json
program/windows/: CMakeLists.txt
scripts/: install_android.sh  launch_appwrite.sh  run_linux.sh  setup_appwrite.dart
scripts/setup_appwrite_tool/: pubspec.yaml
(+104 files in other folders)
